--- a/package.json
+++ b/package.json
@@ -3,45 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-<<<<<<< HEAD
     "dev": "next dev",
-=======
-    "dev": "next dev --turbopack",
->>>>>>> 1e4b143 (Initial commit from Create Next App)
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-<<<<<<< HEAD
-    "bootstrap": "^5.3.3",
-    "next": "15.1.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@heroicons/react": "^2.1.1",
+    "next": "14.1.3",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@react-three/drei": "^9.102.3",
+    "@react-three/fiber": "^8.15.19",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.3",
-    "typescript": "^5"
-=======
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.3"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
+    "framer-motion": "^11.0.12",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.3",
-    "@eslint/eslintrc": "^3"
->>>>>>> 1e4b143 (Initial commit from Create Next App)
+    "react-intersection-observer": "^9.8.1",
+    "tailwindcss": "^3.3.0",
+    "three": "^0.162.0",
+    "typescript": "^5"
   }
 }
